--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-﻿/* style.css 2.3.0*/
+﻿/* style.css 2.3.1*/
 
 /* ------------------ */
 /*     共通スタイル   */
@@ -739,23 +739,6 @@ h2 {
     margin: 0 auto;
 }
 
-/* 下段の入力欄 */
-#fioRate {
-    width: 200px;
-    height: 23px;
-    background-color: #2e2e2e;
-    color: #ffffff;
-    border: 1px solid #444444;
-    border-radius: 5px;
-    font-size: 12px;
-    padding: 5px;
-    padding-right: 3px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-    text-align: right;
-    cursor: text;
-    -moz-appearance: textfield;
-}
-
 /* 透明なダミー要素*/
 .fifo-dummy {
     width: 200px;
@@ -1198,13 +1181,13 @@ input[type="range"].master-slider::-webkit-slider-thumb {
 
 /* リメインタイマーの表示 */
 #listedit-remain-time, #on-air-remain-time {
-    font-size: 1.2em;
+    font-size: 1.5em;
     color: orange;
     font-weight: bold;
     font-family: Arial, sans-serif;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     background-color: rgba(0, 0, 0, 0.7); /* 半透明の黒地背景 */
-    padding: 10px 20px; /* 内側の余白を追加 */
+    padding: 7px 20px; /* 内側の余白を追加 */
     border-radius: 10px; /* 角を丸くする */
     text-align: center; /* テキストを中央揃え */
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5); /* 軽い影効果 */
@@ -1520,7 +1503,7 @@ input[type="range"].master-slider::-webkit-slider-thumb {
 /* ------------------ */
 
 /* 入力フィールドのスタイル */
-#fadeInDuration, #ftbRate {
+#fadeInDuration, #ftbRate, #fioRate {
     width: 50px; /* 入力フィールドの幅 */
     height: 23px; /* 入力フィールドの高さ */
     background-color: #2e2e2e; /* 背景色をダークグレー */
@@ -1537,20 +1520,26 @@ input[type="range"].master-slider::-webkit-slider-thumb {
 }
 
 /* 矢印部分（スピンボックス）の非表示または調整 */
-#fadeInDuration::-webkit-inner-spin-button, #ftbRate::-webkit-inner-spin-button {
+#fadeInDuration::-webkit-inner-spin-button,
+#ftbRate::-webkit-inner-spin-button,
+#fioRate::-webkit-inner-spin-button {
     margin-left: 7px; /* 矢印と数字の距離を調整 */
 }
+
 
 #fadeInDuration::-webkit-outer-spin-button, #ftbRate::-webkit-outer-spin-button {
     margin-left: 7px; /* 矢印と数字の距離を調整 */
 }
 
 /* 入力フィールドにフォーカスが当たった時のスタイル */
-#fadeInDuration:focus, #ftbRate:focus {
+#fadeInDuration:focus,
+#ftbRate:focus,
+#fioRate:focus {
     outline: none; /* フォーカス時の枠線を非表示 */
     border: 1px solid #007BFF; /* フォーカス時の枠線をブルーに */
     box-shadow: 0 0 8px rgba(0, 123, 255, 0.5); /* フォーカス時の軽い発光 */
 }
+
 
 /* オーディオフェードインアウトRATE */
 #fioDuration, #fioRate {
@@ -1602,13 +1591,13 @@ input[type="range"].master-slider::-webkit-slider-thumb {
 /*         時計       */
 /* ------------------ */
 #footer-clock {
-    font-size: 1.2em;
+    font-size: 1.5em;
     color: lightblue;
     font-weight: bold;
     font-family: Arial, sans-serif;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     background-color: rgba(0, 0, 0, 0.7); /* 半透明の黒地背景 */
-    padding: 10px 20px; /* 内側の余白を追加 */
+    padding: 7px 20px; /* 内側の余白を追加 */
     border-radius: 10px; /* 角を丸くする */
     display: inline-block; /* コンテンツ幅に基づくボックス化 */
     text-align: center; /* テキストを中央揃え */
@@ -1616,4 +1605,3 @@ input[type="range"].master-slider::-webkit-slider-thumb {
     width: 210px; /* 幅を固定 */
     letter-spacing: 2px; /* 数字間の間隔を一定に */
 }
-
