--- a/style.css
+++ b/style.css
@@ -26,26 +26,26 @@ body {
 /*   レイアウト設定   */
 /* ------------------ */
 
+/* レイアウト設定 */
 .grid-container {
     display: grid;
     grid-template-areas: "listedit playlist onair";
     grid-template-columns: minmax(400px, 1fr) minmax(620px, 1.4fr) minmax(450px, 1.2fr);
     grid-template-rows: 1fr;
-    gap: 0.4rem;
+    gap: 0.625rem;
     padding: 0 0.5rem;
     width: calc(100% - 1rem);
     height: 100vh;
     margin: 0;
     box-sizing: border-box;
 }
-
 /* ------------------ */
 /*    セクション共通  */
 /* ------------------ */
 
 .section {
     background-color: #383838;
-    padding: 0.7rem;
+    padding: 0.5rem;
     border-radius: 0.31rem;
     display: flex;
     flex-direction: column;
@@ -86,7 +86,7 @@ body {
 /* ------------------ */
 h2 {
     margin: 0.125rem 0;
-    font-size: 1em;
+    font-size: 0.8em;
     font-weight: bold;
     text-align: center;
     width: 100%;
